--- a/src/app/modules/admin/admin.component.html
+++ b/src/app/modules/admin/admin.component.html
@@ -5,9 +5,9 @@
 >
   <a
     class="nav-link border border-success"
-    [routerLink]="['admin']"
+    [routerLink]="['account-administration']"
     routerLinkActive="active bg-success border-dark"
-    >Test Admin</a
+    >Account Administration</a
   >
 </div>
 
