--- a/src/app/modules/employee/order-administration/order-administration.component.html
+++ b/src/app/modules/employee/order-administration/order-administration.component.html
@@ -27,6 +27,14 @@
     class="table-responsive page-content w-100 table-container"
     *ngIf="dataLoaded"
   >
+    <div class="table-buttons-row">
+      <button
+        class="btn btn-success"
+        (click)="reloadConent(page, pageSize, currentSorting)"
+      >
+        Refresh
+      </button>
+    </div>
     <table class="table table-bordered table-hover table-content w-100">
       <thead class="thead">
         <tr>
