--- a/src/app/modules/employee/order-administration/order-administration.component.sass
+++ b/src/app/modules/employee/order-administration/order-administration.component.sass
@@ -7,6 +7,9 @@ thead
 
 tr
     cursor: pointer
+
+.table-buttons-row
+    float: right
    
 @media screen and (max-width: 767px)
     .table-content
@@ -19,6 +22,8 @@ tr
         padding: .25rem .5rem
         font-size: .875rem
         line-height: 1.5
+    .table-buttons-row
+        font-size: 0.9em
 
 @media (min-width: 768px) and (max-width: 991px)
     .table-content
