Add product image spinner

--- a/src/app/modules/products/flower/flower.component.sass
+++ b/src/app/modules/products/flower/flower.component.sass
@@ -7,6 +7,8 @@ ngb-pagination ::ng-deep .pagination .page-link
   font-size: 1.25rem
   line-height: 1.5
 
+.card-img-top
+
 .card-deck
   margin-top: 2em
   margin-bottom: 2em
