--- a/src/app/shared/navigation/navigation.component.html
+++ b/src/app/shared/navigation/navigation.component.html
@@ -73,6 +73,9 @@
             >Logout</a
           >
         </li>
+        <li class="nav-item">
+          <a class="nav-item nav-link" routerLink="/about">About</a>
+        </li>
       </ul>
     </div>
   </div>
