Add advertisment carousel and shop promoting icons to home page

--- a/src/app/shared/footer/footer.component.html
+++ b/src/app/shared/footer/footer.component.html
@@ -2,4 +2,12 @@
   <div class="text-center text-justify">
     <b class="text-light">© Copyright: Damian Knapik</b>
   </div>
+  <div class="text-center text-light">
+    Icons made by
+    <a href="https://www.flaticon.com/authors/freepik" title="Freepik"
+      >Freepik</a
+    >
+    from
+    <a href="https://www.flaticon.com/" title="Flaticon">www.flaticon.com</a>
+  </div>
 </footer>
