--- a/src/app/modules/home/home.component.html
+++ b/src/app/modules/home/home.component.html
@@ -1,6 +1,131 @@
-<div class="component-title text-center text-justify">
-  <h2>
-    First invocation of this application requests can take some times as Heroku
-    hosting have to wake up backend and database containers each time.
-  </h2>
+<div class="presentation-carousel">
+  <label for="carousel" id="carousel-label"><h2>Our latest deals</h2></label>
+  <ngb-carousel id="carousel" [pauseOnHover]="true">
+    <ng-template ngbSlide>
+      <div>
+        <img
+          class="carousel-image"
+          src="https://drive.google.com/uc?id=1SL9jAudKrwKRWcZyzGqCZe0r-DIZ_nP6"
+          alt="Advertisment"
+        />
+        <div class="carousel-caption">
+          <h3>We're cutting delivery fees</h3>
+          <p>For limited amount of time, every delivery is now 5 PLN!</p>
+        </div>
+      </div>
+    </ng-template>
+    <ng-template ngbSlide>
+      <div>
+        <img
+          class="carousel-image"
+          src="https://drive.google.com/uc?id=1zlfVm67xCrMRz4-tVcUFEv4Po40yJmCO"
+          alt="Advertisment"
+        />
+        <div class="carousel-caption">
+          <h3>Check out our new souvenirs</h3>
+          <p>Available from "souvenirs" product category.</p>
+        </div>
+      </div>
+    </ng-template>
+    <ng-template ngbSlide>
+      <div>
+        <img
+          class="carousel-image"
+          src="https://drive.google.com/uc?id=1SBFNrAz8ZeARfJIqUwge-faUBNj6msIe"
+          alt="Advertisment"
+        />
+        <div class="carousel-caption">
+          <h3>Have you seen our "About" page?</h3>
+          <p>
+            You can access it from page navigator to check our new
+            functionalities.
+          </p>
+        </div>
+      </div>
+    </ng-template>
+  </ngb-carousel>
 </div>
+<hr class="separator solid" />
+<div class="container">
+  <div class="row presentation-icon-header">
+    <div class="col text-center">
+      <h3><b>Why choose us?</b></h3>
+    </div>
+  </div>
+  <div class="row">
+    <div class="col-3">
+      <div
+        class="presentation-icon-container mx-auto border-success rounded-circle d-block"
+      >
+        <img
+          class="presentation-icon mx-auto d-block img-thumbnail"
+          src="https://drive.google.com/uc?id=1EMy-hbzuJd-AkV5WWyXWdxupBSP6cZhL"
+          alt="Delivery Truck"
+        />
+      </div>
+      <div class="text-center">
+        <b class="icon-title text-success">Pick your own delivery date</b>
+        <br />
+        <p class="text-success">Our working hours are beetwen 6:00 to 24:00</p>
+      </div>
+    </div>
+    <div class="col-3">
+      <div
+        class="presentation-icon-container mx-auto border-primary rounded-circle d-block"
+      >
+        <img
+          class="presentation-icon mx-auto d-block img-thumbnail"
+          src="https://drive.google.com/uc?id=111mRHp06Icz9Ql_BXbSc-VwRtAd_TiJi"
+          alt="Delivery Truck"
+        />
+      </div>
+      <div class="text-center">
+        <b class="icon-title text-primary">Wide variety of products</b>
+        <br />
+        <p class="text-primary">
+          In our store, flowers are not the only thing you can buy
+        </p>
+      </div>
+    </div>
+    <div class="col-3">
+      <div
+        class="presentation-icon-container mx-auto border-danger rounded-circle d-block"
+      >
+        <img
+          class="presentation-icon mx-auto d-block img-thumbnail"
+          src="https://drive.google.com/uc?id=1UKTRseK3amkQu6ZIiGSQylUS0V0VfwqO"
+          alt="Delivery Truck"
+        />
+      </div>
+      <div class="text-center">
+        <b class="icon-title text-danger">Best quality</b>
+        <br />
+        <p class="text-danger">
+          We are partnered only with the best suppliers on the market
+        </p>
+      </div>
+    </div>
+    <div class="col-3">
+      <div
+        class="presentation-icon-container mx-auto border-warning rounded-circle d-block"
+      >
+        <img
+          class="presentation-icon mx-auto d-block img-thumbnail"
+          src="https://drive.google.com/uc?id=1i-4tBzXHIx3oCha5V33FeAFpzBY7b2O0"
+          alt="Delivery Truck"
+        />
+      </div>
+      <div class="text-center">
+        <b class="icon-title text-warning">Specialized customer service</b>
+        <br />
+        <p class="text-warning">
+          Our experts are ready to answer any of your questions
+        </p>
+      </div>
+    </div>
+  </div>
+</div>
+<br />
+<hr class="solid" />
+<br />
+<div class="presentation-tiles"></div>
