--- a/src/app/modules/home/home.component.sass
+++ b/src/app/modules/home/home.component.sass
@@ -1,3 +1,31 @@
-@media screen and (max-width: 767px)
-    .component-title>h2
-        font-size: 1.25em
+.presentation-carousel
+    margin-top: 4em
+
+.carousel-image
+    width: 100%
+    height: 100%
+
+.carousel-caption
+    background-color: rgba(92,184,92,0.8)
+
+.separator
+    margin-top: 2.5em
+    margin-bottom: 2.5em
+
+.presentation-icon-header
+    margin-bottom:  4em
+
+.icon-title
+    font-size: 1.15em
+
+.presentation-icon-container
+    padding: 1.2em
+    width: fit-content
+    border: solid
+    border-width: 10px
+
+.presentation-icon
+    border: none
+    background: none
+    width: 128px
+    height: 128px
