--- a/src/app/shared/navigation/navigation.component.sass
+++ b/src/app/shared/navigation/navigation.component.sass
@@ -3,6 +3,9 @@
 	margin-right: 1% !important
 	margin: auto
 
+.dropdown-item:active
+	background-color: rgb(92, 184, 92)
+
 @media screen and (max-width: 767px)
 	.navbar-nav, .dropdown-item
 		font-size: 0.7rem
