--- a/src/app/modules/home/home.component.html
+++ b/src/app/modules/home/home.component.html
@@ -1,8 +1,8 @@
 <div class="presentation-carousel">
   <label for="carousel" id="carousel-label"><h2>Our latest deals</h2></label>
-  <ngb-carousel id="carousel" [pauseOnHover]="true">
+  <ngb-carousel @fade id="carousel" [pauseOnHover]="true">
     <ng-template ngbSlide>
-      <div>
+      <div class="carousel-div-container">
         <img
           class="carousel-image"
           src="https://drive.google.com/uc?id=1SL9jAudKrwKRWcZyzGqCZe0r-DIZ_nP6"
@@ -15,7 +15,7 @@
       </div>
     </ng-template>
     <ng-template ngbSlide>
-      <div>
+      <div class="carousel-div-container">
         <img
           class="carousel-image"
           src="https://drive.google.com/uc?id=1zlfVm67xCrMRz4-tVcUFEv4Po40yJmCO"
@@ -28,7 +28,7 @@
       </div>
     </ng-template>
     <ng-template ngbSlide>
-      <div>
+      <div class="carousel-div-container">
         <img
           class="carousel-image"
           src="https://drive.google.com/uc?id=1SBFNrAz8ZeARfJIqUwge-faUBNj6msIe"
@@ -45,7 +45,7 @@
     </ng-template>
   </ngb-carousel>
 </div>
-<hr class="separator solid" />
+<hr class="separator" />
 <div class="container">
   <div class="row presentation-icon-header">
     <div class="col text-center">
@@ -53,79 +53,100 @@
     </div>
   </div>
   <div class="row">
-    <div class="col-3">
+    <div class="presentation-icon-column col-3">
       <div
         class="presentation-icon-container mx-auto border-success rounded-circle d-block"
       >
-        <img
-          class="presentation-icon mx-auto d-block img-thumbnail"
-          src="https://drive.google.com/uc?id=1EMy-hbzuJd-AkV5WWyXWdxupBSP6cZhL"
-          alt="Delivery Truck"
-        />
+        <app-ngui-in-view>
+          <img
+            *ngIf
+            class="presentation-icon mx-auto d-block img-thumbnail animate__animated animate__zoomIn animate__delay-1s"
+            src="https://drive.google.com/uc?id=1EMy-hbzuJd-AkV5WWyXWdxupBSP6cZhL"
+            alt="Delivery Truck"
+          />
+        </app-ngui-in-view>
       </div>
       <div class="text-center">
         <b class="icon-title text-success">Pick your own delivery date</b>
         <br />
-        <p class="text-success">Our working hours are beetwen 6:00 to 24:00</p>
+        <p
+          class="icon-description text-success animate__animated animate__fadeInUp animate__delay-1s"
+        >
+          Our working hours are beetwen 6:00 to 24:00
+        </p>
       </div>
     </div>
-    <div class="col-3">
+    <div class="presentation-icon-column col-3">
       <div
         class="presentation-icon-container mx-auto border-primary rounded-circle d-block"
       >
-        <img
-          class="presentation-icon mx-auto d-block img-thumbnail"
-          src="https://drive.google.com/uc?id=111mRHp06Icz9Ql_BXbSc-VwRtAd_TiJi"
-          alt="Delivery Truck"
-        />
+        <app-ngui-in-view>
+          <img
+            *ngIf
+            class="presentation-icon mx-auto d-block img-thumbnail animate__animated animate__zoomIn animate__delay-1s"
+            src="https://drive.google.com/uc?id=111mRHp06Icz9Ql_BXbSc-VwRtAd_TiJi"
+            alt="Delivery Truck"
+          />
+        </app-ngui-in-view>
       </div>
       <div class="text-center">
         <b class="icon-title text-primary">Wide variety of products</b>
         <br />
-        <p class="text-primary">
+        <p
+          class="icon-description text-primary animate__animated animate__fadeInUp animate__delay-1s"
+        >
           In our store, flowers are not the only thing you can buy
         </p>
       </div>
     </div>
-    <div class="col-3">
+    <div class="presentation-icon-column col-3">
       <div
         class="presentation-icon-container mx-auto border-danger rounded-circle d-block"
       >
-        <img
-          class="presentation-icon mx-auto d-block img-thumbnail"
-          src="https://drive.google.com/uc?id=1UKTRseK3amkQu6ZIiGSQylUS0V0VfwqO"
-          alt="Delivery Truck"
-        />
+        <app-ngui-in-view>
+          <img
+            *ngIf
+            class="presentation-icon mx-auto d-block img-thumbnail animate__animated animate__zoomIn animate__delay-1s"
+            src="https://drive.google.com/uc?id=1UKTRseK3amkQu6ZIiGSQylUS0V0VfwqO"
+            alt="Delivery Truck"
+          />
+        </app-ngui-in-view>
       </div>
       <div class="text-center">
         <b class="icon-title text-danger">Best quality</b>
         <br />
-        <p class="text-danger">
+        <p
+          class="icon-description text-danger animate__animated animate__fadeInUp animate__delay-1s"
+        >
           We are partnered only with the best suppliers on the market
         </p>
       </div>
     </div>
-    <div class="col-3">
+    <div class="presentation-icon-column col-3">
       <div
         class="presentation-icon-container mx-auto border-warning rounded-circle d-block"
       >
-        <img
-          class="presentation-icon mx-auto d-block img-thumbnail"
-          src="https://drive.google.com/uc?id=1i-4tBzXHIx3oCha5V33FeAFpzBY7b2O0"
-          alt="Delivery Truck"
-        />
+        <app-ngui-in-view>
+          <img
+            *ngIf
+            class="presentation-icon mx-auto d-block img-thumbnail animate__animated animate__zoomIn animate__delay-1s"
+            src="https://drive.google.com/uc?id=1i-4tBzXHIx3oCha5V33FeAFpzBY7b2O0"
+            alt="Delivery Truck"
+          />
+        </app-ngui-in-view>
       </div>
       <div class="text-center">
         <b class="icon-title text-warning">Specialized customer service</b>
         <br />
-        <p class="text-warning">
+
+        <p
+          class="icon-description text-warning animate__animated animate__fadeInUp animate__delay-1s"
+        >
           Our experts are ready to answer any of your questions
         </p>
       </div>
     </div>
   </div>
 </div>
-<br />
-<hr class="solid" />
-<br />
+<hr class="separator" />
 <div class="presentation-tiles"></div>
