Change lazy loading images method, move animation declarations to .sass file

--- a/src/app/modules/home/home.component.html
+++ b/src/app/modules/home/home.component.html
@@ -57,21 +57,17 @@
       <div
         class="presentation-icon-container mx-auto border-success rounded-circle d-block"
       >
-        <app-ngui-in-view>
-          <img
-            *ngIf
-            class="presentation-icon mx-auto d-block img-thumbnail animate__animated animate__zoomIn animate__delay-1s"
-            src="https://drive.google.com/uc?id=1EMy-hbzuJd-AkV5WWyXWdxupBSP6cZhL"
-            alt="Delivery Truck"
-          />
-        </app-ngui-in-view>
+        <img
+          class="presentation-icon mx-auto d-block img-thumbnail"
+          lazyLoad="https://drive.google.com/uc?id=1EMy-hbzuJd-AkV5WWyXWdxupBSP6cZhL"
+          src="data:image/png;base64,iVBORw0KGgoAAAANSUhEUgAAAAEAAAABCAQAAAC1HAwCAAAAC0lEQVR42mP8Xw8AAoMBgDTD2qgAAAAASUVORK5CYII="
+          alt="Delivery Truck"
+        />
       </div>
       <div class="text-center">
         <b class="icon-title text-success">Pick your own delivery date</b>
         <br />
-        <p
-          class="icon-description text-success animate__animated animate__fadeInUp animate__delay-1s"
-        >
+        <p class="icon-description text-success">
           Our working hours are beetwen 6:00 to 24:00
         </p>
       </div>
@@ -80,21 +76,17 @@
       <div
         class="presentation-icon-container mx-auto border-primary rounded-circle d-block"
       >
-        <app-ngui-in-view>
-          <img
-            *ngIf
-            class="presentation-icon mx-auto d-block img-thumbnail animate__animated animate__zoomIn animate__delay-1s"
-            src="https://drive.google.com/uc?id=111mRHp06Icz9Ql_BXbSc-VwRtAd_TiJi"
-            alt="Delivery Truck"
-          />
-        </app-ngui-in-view>
+        <img
+          class="presentation-icon mx-auto d-block img-thumbnail"
+          lazyLoad="https://drive.google.com/uc?id=111mRHp06Icz9Ql_BXbSc-VwRtAd_TiJi"
+          src="data:image/png;base64,iVBORw0KGgoAAAANSUhEUgAAAAEAAAABCAQAAAC1HAwCAAAAC0lEQVR42mP8Xw8AAoMBgDTD2qgAAAAASUVORK5CYII="
+          alt="Bouquet"
+        />
       </div>
       <div class="text-center">
         <b class="icon-title text-primary">Wide variety of products</b>
         <br />
-        <p
-          class="icon-description text-primary animate__animated animate__fadeInUp animate__delay-1s"
-        >
+        <p class="icon-description text-primary">
           In our store, flowers are not the only thing you can buy
         </p>
       </div>
@@ -103,21 +95,17 @@
       <div
         class="presentation-icon-container mx-auto border-danger rounded-circle d-block"
       >
-        <app-ngui-in-view>
-          <img
-            *ngIf
-            class="presentation-icon mx-auto d-block img-thumbnail animate__animated animate__zoomIn animate__delay-1s"
-            src="https://drive.google.com/uc?id=1UKTRseK3amkQu6ZIiGSQylUS0V0VfwqO"
-            alt="Delivery Truck"
-          />
-        </app-ngui-in-view>
+        <img
+          class="presentation-icon mx-auto d-block img-thumbnail"
+          lazyLoad="https://drive.google.com/uc?id=1UKTRseK3amkQu6ZIiGSQylUS0V0VfwqO"
+          src="data:image/png;base64,iVBORw0KGgoAAAANSUhEUgAAAAEAAAABCAQAAAC1HAwCAAAAC0lEQVR42mP8Xw8AAoMBgDTD2qgAAAAASUVORK5CYII="
+          alt="Order"
+        />
       </div>
       <div class="text-center">
         <b class="icon-title text-danger">Best quality</b>
         <br />
-        <p
-          class="icon-description text-danger animate__animated animate__fadeInUp animate__delay-1s"
-        >
+        <p class="icon-description text-danger">
           We are partnered only with the best suppliers on the market
         </p>
       </div>
@@ -126,22 +114,18 @@
       <div
         class="presentation-icon-container mx-auto border-warning rounded-circle d-block"
       >
-        <app-ngui-in-view>
-          <img
-            *ngIf
-            class="presentation-icon mx-auto d-block img-thumbnail animate__animated animate__zoomIn animate__delay-1s"
-            src="https://drive.google.com/uc?id=1i-4tBzXHIx3oCha5V33FeAFpzBY7b2O0"
-            alt="Delivery Truck"
-          />
-        </app-ngui-in-view>
+        <img
+          class="presentation-icon mx-auto d-block img-thumbnail"
+          lazyLoad="https://drive.google.com/uc?id=1i-4tBzXHIx3oCha5V33FeAFpzBY7b2O0"
+          src="data:image/png;base64,iVBORw0KGgoAAAANSUhEUgAAAAEAAAABCAQAAAC1HAwCAAAAC0lEQVR42mP8Xw8AAoMBgDTD2qgAAAAASUVORK5CYII="
+          alt="Customer service"
+        />
       </div>
       <div class="text-center">
         <b class="icon-title text-warning">Specialized customer service</b>
         <br />
 
-        <p
-          class="icon-description text-warning animate__animated animate__fadeInUp animate__delay-1s"
-        >
+        <p class="icon-description text-warning">
           Our experts are ready to answer any of your questions
         </p>
       </div>
