--- a/src/app/modules/home/home.component.sass
+++ b/src/app/modules/home/home.component.sass
@@ -33,6 +33,10 @@
 .icon-title
     font-size: 1.15em
 
+.icon-description
+    animation: fadeInUp
+    animation-duration: 1s
+
 .presentation-icon-container
     padding: 1.2em
     width: fit-content
@@ -44,6 +48,12 @@
     background: none
     width: 128px
     height: 128px
+
+.presentation-icon.ng-lazyloaded
+  animation: zoomIn
+  animation-duration: 1s
+  animation-delay: 0s
+
 
 @media screen and (max-width: 767px)
     #carousel-label>h2
