Add main page product selection, fix small devices product menu over extending

--- a/src/app/modules/home/home.component.html
+++ b/src/app/modules/home/home.component.html
@@ -133,4 +133,39 @@
   </div>
 </div>
 <hr class="separator" />
-<div class="presentation-tiles"></div>
+<div class="presentation-tiles container-fluid">
+  <div><h3>Check out our products</h3></div>
+  <div class="row product-row">
+    <div class="product-col">
+      <a routerLink="/products/flower">
+        <img
+          class="product-image"
+          src="https://drive.google.com/uc?id=19TjVlhRjuFPaPsP7Smcnqsev6mlcRWay"
+        />
+      </a>
+    </div>
+    <div class="product-col">
+      <a routerLink="/products/occasional-article">
+        <img
+          class="product-image"
+          src="https://drive.google.com/uc?id=1fIPVRwSDfURT8rN6VcmofCww3P3NDDsb"
+        />
+      </a>
+    </div>
+    <div class="product-col">
+      <a routerLink="/products/souvenir">
+        <img
+          class="product-image"
+          src="https://drive.google.com/uc?id=1DoT1Z5USp0uFqCJ93C_f4jkvQALo62vv"
+      /></a>
+    </div>
+    <div class="product-col">
+      <a routerLink="/products/bouquet">
+        <img
+          class="product-image"
+          src="https://drive.google.com/uc?id=1TzEzKiuiYDlTlLjM81hzHRtGZEiEB1Cr"
+        />
+      </a>
+    </div>
+  </div>
+</div>
