--- a/src/app/modules/home/home.component.sass
+++ b/src/app/modules/home/home.component.sass
@@ -54,6 +54,28 @@
   animation-duration: 1s
   animation-delay: 0s
 
+.product-row
+    margin-top: 2em
+    margin-left: auto
+    margin-right: auto
+
+.product-col
+    max-width: none
+    width: 270px
+    height: 100px
+    margin-left: auto
+    margin-right: auto
+
+.product-image
+    min-wdith: 270px
+    height: 100px
+    filter: url("data:image/svg+xml;utf8,<svg xmlns=\'http://www.w3.org/2000/svg\'><filter id=\'grayscale\'><feColorMatrix type=\'matrix\' values=\'0.3333 0.3333 0.3333 0 0 0.3333 0.3333 0.3333 0 0 0.3333 0.3333 0.3333 0 0 0 0 0 1 0\'/></filter></svg>#grayscale")
+    filter: gray
+    -webkit-filter: grayscale(100%)
+
+.product-image:hover
+    filter: none
+    -webkit-filter: grayscale(0%)
 
 @media screen and (max-width: 767px)
     #carousel-label>h2
@@ -76,8 +98,10 @@
         max-width: 100%
 
 
-@media (min-width: 768px) and (max-width: 1023px)
+@media (min-width: 768px) and (max-width: 1024px)
     .presentation-icon-column
         flex: 0 0 50%
         max-width: 50%
+    .product-col
+
 
