--- a/src/app/modules/products/products.component.sass
+++ b/src/app/modules/products/products.component.sass
@@ -1,7 +1,11 @@
 .product-content
   margin-top: 2%
 
-@media screen and (max-width: 767px)
+@media screen and (max-width: 580px)
+  .product-menu>label
+    font-size: 0.6em
+
+@media (min-width: 581px) and (max-width: 767px)
   .product-menu>label
     font-size: 0.7em
 
