Add home component animations, minor layout fixes in account and orded details and product pages

--- a/src/app/modules/employee/order-administration/order-details/order-details.component.sass
+++ b/src/app/modules/employee/order-administration/order-details/order-details.component.sass
@@ -53,5 +53,5 @@
   #payment-type
     width: fit-content
     font-size: 0.95em
-  input, textarea
+  input, textarea, select
     font-size: 0.85em
