--- a/src/app/modules/home/home.component.html
+++ b/src/app/modules/home/home.component.html
@@ -141,6 +141,7 @@
         <img
           class="product-image"
           src="https://drive.google.com/uc?id=19TjVlhRjuFPaPsP7Smcnqsev6mlcRWay"
+          alt="Flowers"
         />
       </a>
     </div>
@@ -149,6 +150,7 @@
         <img
           class="product-image"
           src="https://drive.google.com/uc?id=1fIPVRwSDfURT8rN6VcmofCww3P3NDDsb"
+          alt="Occasional Articles"
         />
       </a>
     </div>
@@ -157,6 +159,7 @@
         <img
           class="product-image"
           src="https://drive.google.com/uc?id=1DoT1Z5USp0uFqCJ93C_f4jkvQALo62vv"
+          alt="Souvenirs"
       /></a>
     </div>
     <div class="product-col">
@@ -164,6 +167,7 @@
         <img
           class="product-image"
           src="https://drive.google.com/uc?id=1TzEzKiuiYDlTlLjM81hzHRtGZEiEB1Cr"
+          alt="Bouquets"
         />
       </a>
     </div>
