--- a/src/app/modules/products/flower/flower.component.sass
+++ b/src/app/modules/products/flower/flower.component.sass
@@ -7,7 +7,8 @@ ngb-pagination ::ng-deep .pagination .page-link
   font-size: 1.25rem
   line-height: 1.5
 
-.card-img-top
+.card-img-top:before
+  padding-bottom: 74.85% !important
 
 .card-deck
   margin-top: 2em
