--- a/src/app/modules/admin/account-administration/account-details/account-details.component.sass
+++ b/src/app/modules/admin/account-administration/account-details/account-details.component.sass
@@ -24,12 +24,12 @@
   width: 50%
 
 @media screen and (max-width: 767px)
-    input, textarea
+    input, textarea, select
         font-size: 0.725em
     label
       font-size: 0.85em
     button
-        font-size: 0.9em
+        font-size: 0.85em
     #creation-date
       font-size: 0.85em
     .account-details-component-button
