--- a/src/app/modules/home/home.component.sass
+++ b/src/app/modules/home/home.component.sass
@@ -37,6 +37,9 @@
     animation: fadeInUp
     animation-duration: 1s
 
+.presentation-icon-container:before
+    padding-bottom: 37.03% !important // Because image ratio is 27:10
+
 .presentation-icon-container
     padding: 1.2em
     width: fit-content
@@ -73,6 +76,11 @@
     filter: gray
     -webkit-filter: grayscale(100%)
 
+.product-col:hover
+    animation: pulse
+    animation-duration: 1.25s
+    z-index: 99 !important
+
 .product-image:hover
     filter: none
     -webkit-filter: grayscale(0%)
@@ -97,11 +105,13 @@
         flex: none
         max-width: 100%
 
-
-@media (min-width: 768px) and (max-width: 1024px)
+@media (min-width: 768px) and (max-width: 1200px)
     .presentation-icon-column
         flex: 0 0 50%
         max-width: 50%
     .product-col
+        margin-top: 15px
+        margin-left: 30px
+        margin-right: 30px
 
 
