--- a/src/app/modules/products/souvenir/souvenir.component.sass
+++ b/src/app/modules/products/souvenir/souvenir.component.sass
@@ -7,6 +7,9 @@ ngb-pagination ::ng-deep .pagination .page-link
   font-size: 1.25rem
   line-height: 1.5
 
+.card-img-top:before
+  padding-bottom: 74.85% !important
+
 .card-deck
   margin-top: 2em
   margin-bottom: 2em
