Fix shopping cart Souvenir removal error, update about

--- a/src/app/modules/about/about.component.html
+++ b/src/app/modules/about/about.component.html
@@ -76,8 +76,10 @@
       <b>[ADMIN/EMPLOYEE/CUSTOMER]</b> Anti scrippting features - API protection
     </li>
     <li>
-      <b>[CUSTOMER]</b> Main page shop presentation (Maybe carousel with
-      banners/promotions, etc?)
+      <s
+        ><b>[CUSTOMER]</b> Main page shop presentation (Maybe carousel with
+        banners/promotions, etc?)</s
+      >
     </li>
     <li><b>[ADMIN/EMPLOYEE]</b> Content management system</li>
     <li><b>[ADMIN/EMPLOYEE/CUSTOMER]</b> Built-in messaging system</li>
