Refactor product category components by utlizing new interfaces and abstract classes

--- a/src/app/modules/products/flower/flower.component.html
+++ b/src/app/modules/products/flower/flower.component.html
@@ -9,7 +9,7 @@
       [rotate]="true"
       [ellipses]="false"
       [collectionSize]="collectionSize"
-      (pageChange)="onChangePage(page)"
+      (pageChange)="onPageChange(page)"
     ></ngb-pagination>
   </div>
 
@@ -33,7 +33,13 @@
           <div
             class="card-img-top"
             class="row justify-content-center"
-            *ngIf="!isImageLoaded(rowIndex * elemntsInRow + columnIndex)"
+            *ngIf="
+              !isImageLoaded(
+                imagesLoaded,
+                rowIndex * elemntsInRow + columnIndex,
+                pageSize
+              )
+            "
           >
             <div
               class="spinner-border text-success"
@@ -47,8 +53,20 @@
             class="card-img-top"
             src="{{ product.imageMedium }}"
             alt="Image Product"
-            [hidden]="!isImageLoaded(rowIndex * elemntsInRow + columnIndex)"
-            (load)="onImageLoad(rowIndex * elemntsInRow + columnIndex)"
+            [hidden]="
+              !isImageLoaded(
+                imagesLoaded,
+                rowIndex * elemntsInRow + columnIndex,
+                pageSize
+              )
+            "
+            (load)="
+              onImageLoad(
+                imagesLoaded,
+                pageSize,
+                rowIndex * elemntsInRow + columnIndex
+              )
+            "
           />
         </div>
         <div class="card-header">
@@ -88,7 +106,7 @@
         [rotate]="true"
         [ellipses]="false"
         [collectionSize]="collectionSize"
-        (pageChange)="onChangePage(page)"
+        (pageChange)="onPageChange(page)"
       ></ngb-pagination>
     </div>
   </div>
