Add prettier/lint configuration, add bug tracking to about page

--- a/src/app/modules/about/about.component.html
+++ b/src/app/modules/about/about.component.html
@@ -84,6 +84,15 @@
     <li><b>[ADMIN/EMPLOYEE]</b> Content management system</li>
     <li><b>[ADMIN/EMPLOYEE/CUSTOMER]</b> Built-in messaging system</li>
   </ul>
+
+  <p><b>Bug tracking:</b></p>
+  <ul>
+    <li>
+      <b>DTS_01 </b>- Refresh on components containg router link active
+      (Products and login/register) causes to always active the first router
+      link active
+    </li>
+  </ul>
 </div>
 <br />
 <hr class="solid" />
